--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./Trie/trie.js"></script>
+    <script src="./BST/binaryTree.js"></script>
 </body>
 </html>
